--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Pudhina
+title: Shanchui
 description: >
   A simple, minimal Jekyll theme for a personal web page and blog, focusing on white space and readability
 
-baseurl: "/Pudhina" # the subpath of your site, e.g. /blog/
-url: "https://knhash.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://variable003.github.io" # the base hostname & protocol for your site
 
 author:
-  fullname: Pudhina
+  fullname: Shanchui
   github: github
   linkedin: linkedin
-  email: example@email.com
+  email: 2397951125@qq.com
 
 
 # Syntax highlighting
